<resources>
    <string name="app_name">Jieshuo Extension</string>
    <string name="service_summary">Печатайте быстрее</string>
    <string name="service_description">
        Данное расширение полезно в следующих ситуациях
        \n 1. Расширение дает доступ Jieshuo, VoiceBack и Prudence к Samsung Internet
        \n 2. Данное расширение позволяет печатать быстрее в Samsung клавиатуре 
        \n Обратите внимание, что не все клавиатуры могут поддерживаться, возможно, вам придется включить двойное нажатие для печати в настройках вашего экранного диктора
        \n\n Создано Smit TV
        \n https://github.com/Smit-TV
    </string>
    <string name="typing">Клавиатура</string>
    <string name="single_tap_to_activate">Активировать клавиши одним нажатием</string>
    <string name="single_tap_to_activate_summary">Не забудьте включить активацию клавиш двойным нажатием в вашем экранном дикторе</string>
    <string name="disable_gestures_when_keyboard_is_shown">Отключить жесты, когда клавиатура открыта</string>
    <string name="disable_gestures_when_keyboard_is_shown_summary">
        Жесты в области клавиатуры будут отключены.
        \n Обратите внимание, что в области клавиатуры двойное нажатие работать не будет.
        \n Эта функция может не работать с TalkBack.
    </string>
    <string name="long_press_delay">Задержка перед долгим нажатием</string>
    <string name="long_press_delay_summary">
        Долгое нажатие работает при зажатии клавиш.
        \n Используйте 0 для отключения этой функции
    </string>
<string name="general">Общие</string>
<string name="accessibility_settings">Открыть специальные возможности</string>
<string name="donate">Сделать пожертвование</string>
<string name="donate_message">
Спасибо всем тем кто сделал пожертвование!
\n Нажмите "Продолжить" чтобы перейти на страницу пожертвований
</string>
<string name="continue_donate">Продолжить</string>
<string name="cancel">Отмена</string>
<string name="official_tg_channel">Telegram канал</string>
<string name="get_logs">Создать отладочный файл</string>
<string name="get_logs_summary">После создания файла логов их необходимо отправить разработчику, это можно сделать с помощью официального Telegram канала</string>
<string name="disable_explore_by_touch">Отключить исследование касанием когда клавиатура открыта</string>
<string name="disable_explore_by_touch_summary">
Это может улучшить работу с некоторыми клавиатурами и ускорить скорость печати
\n Обратите внимание: Это отключает исследование касанием только в области клавиатуры
</string>
<string name="resume_browse_by_touch_and_gesture_detection_when_none_kbd_element_touched">Возобновить исследование касанием и обнаружение жестов при прикосновении к элементу вне клавиатуры</string>
<string name="resume_browse_by_touch_and_gesture_detection_when_none_kbd_element_touched_summary">Например: Когда вы прикоснетесь к кнопке назад на панели навигации</string>
<string name="debug_mode">Режим отладки</string>
<string name="debug_mode_summary">Включение этого режима может снизить производительность\nФайл может содержать персональные данные</string>
</resources>