<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
android:title="@string/typing">
<SwitchPreference
android:title="@string/single_tap_to_activate"
android:summary="@string/single_tap_to_activate_summary"
android:key="single_tap_to_activate"
android:defaultValue="true"/>
<SwitchPreference
android:title="@string/disable_gestures_when_keyboard_is_shown"
android:summary="@string/disable_gestures_when_keyboard_is_shown_summary"
android:key="disable_gestures_when_keyboard_is_shown"
android:defaultValue="true"/>
<EditTextPreference
android:title="@string/long_press_delay"
android:summary="@string/long_press_delay_summary"
android:dialogTitle="@string/long_press_delay"
android:key="long_press_delay"
android:defaultValue="3"
android:inputType="number"/>
</PreferenceCategory>
<PreferenceCategory
android:title="@string/general">
<Preference
android:key="accessibility_settings"
android:title="@string/accessibility_settings"/>
<Preference
android:key="donate"
android:title="@string/donate"/>
<Preference
android:title="@string/official_tg_channel"
android:key="official_tg_channel"/>
<Preference
android:key="about"
android:title="@string/service_description"
android:clickable="false"/>
<Preference
android:title="@string/get_logs"
android:summary="@string/get_logs_summary"
android:key="get_logs"/>
</PreferenceCategory>
</PreferenceScreen>